build fixes